--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,10 +7,8 @@
 body{
     min-height: 100vh;
     background-color: #F4F4F8;
-}
-
-main{
-    min-height: calc(100vh - 100px);
+    padding: 0 20%;
+    overflow-x: hidden;
 }
 
 #nav-list{
@@ -19,8 +17,6 @@ main{
     justify-content: space-between;
     align-items: center;
     height: 50px;
-    width: 60%;
-    margin: 0 auto;
 }
 
 #nav-list a{
@@ -53,12 +49,23 @@ main{
     color: #FE4A49;
 }
 
+main{
+    padding-top: 20px;
+    min-height: calc(100vh - 100px);
+}
+
+h1{
+    color: #FE4A49;
+}
+
 footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 50px;
     background-color: #E6E6EA;
-    border-top: 1px solid #333  ;
+    border-top: 1px solid #333;
+    position: relative;
+    left: calc((100vw)*(-0.2));
 }
