--- a/public/assets/css/book_form.css
+++ b/public/assets/css/book_form.css
@@ -5,7 +5,7 @@ form{
     margin: 20px auto;
 }
 
-form div{
+form>div{
     margin: 5px 0;
     width: 80%;
 }
@@ -17,7 +17,12 @@ label{
     font-size: large;
 }
 
-form div input, textarea, select{
+.checkbox label{
+    display: contents;
+    width: auto;
+}
+
+form>div input, textarea, select{
     padding: 5px 5px;
     width: 100%;
 }
@@ -58,4 +63,19 @@ input[type="submit"]{
 .input_error{
     border-style: solid;
     border-color: red;
+}
+
+.checkbox{
+    padding: 5px;
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.checkbox > div{
+    padding: 2px 5px;
+}
+
+legend{
+    font-size: larger;
 }
